--- a/src/content/docs/guides/fields/otp-fields.mdx
+++ b/src/content/docs/guides/fields/otp-fields.mdx
@@ -2,7 +2,7 @@
 title: OTP Fields
 description: Learn how to build accessible OTP field Vue components with Formwerk.
 sidebar:
-  order: 10
+  order: 11
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -211,7 +211,7 @@ import OtpField from './OtpField.vue';
 
 ### Readonly
 
-Use `readonly` to mark fields as non-editable. Readonly fields are not validated and are not submitted.
+Use `readonly` to mark fields as non-editable. Readonly fields are still validated and submitted.
 
 <MdxRepl client:load>
 
