feat: added directory and multiple guides and cavnas

--- a/src/content/docs/guides/fields/_partials/_fileField.mdx
+++ b/src/content/docs/guides/fields/_partials/_fileField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={65-160}
+```vue collapse={65-161}
 <script setup lang="ts">
 import { useFileField, type FileFieldProps, FileEntry } from '@formwerk/core';
 
@@ -7,7 +7,7 @@ const props = defineProps<FileFieldProps>();
 const {
   inputProps,
   triggerProps,
-  entry,
+  entries,
   errorMessageProps,
   errorMessage,
   remove,
