--- a/src/content/docs/guides/fields/file-fields.mdx
+++ b/src/content/docs/guides/fields/file-fields.mdx
@@ -225,7 +225,7 @@ import FileField from './FileField.vue';
 
 </MdxRepl>
 
-One important thing is to no forget the `groupProps` binding object, which contains the listeners needed to make the dropzone work.
+One important thing is to no forget the `dropzoneProps` binding object, which contains the listeners needed to make the dropzone work.
 
 You can also build your own `FileEntry` component with the `useFileEntry` composable.
 
