feat: added thumbs and links to new fields

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -89,6 +89,20 @@ Each of these composables helps you build a high-quality and accessible form con
   />
   <PreviewCard
     client:idle
+    title="Time Fields"
+    description="Allows users to enter a time."
+    link="/guides/fields/time-fields/"
+    src="/thumbs/time.mp4"
+  />
+  <PreviewCard
+    client:idle
+    title="File Fields"
+    description="Allows users to upload files."
+    link="/guides/fields/file-fields/"
+    src="/thumbs/file.mp4"
+  />
+  <PreviewCard
+    client:idle
     title="OTP Fields"
     description="Allows users to enter a one-time password."
     link="/guides/fields/otp-fields/"
