fix: checkbox anatomy

--- a/src/content/docs/guides/fields/checkboxes.mdx
+++ b/src/content/docs/guides/fields/checkboxes.mdx
@@ -51,7 +51,7 @@ Currently, the following features are implemented:
 ## Anatomy
 
 <AnatomyCanvas>
-  <AnatomyCheckboxes />
+  <AnatomyCheckboxes client:load />
 </AnatomyCanvas>
 
 ## Building a Checkbox component
