feat: upgrade to 0.10.1 and fix reset docs

--- a/src/content/docs/guides/forms/index.mdx
+++ b/src/content/docs/guides/forms/index.mdx
@@ -1070,7 +1070,7 @@ const onSubmit = handleSubmit((data) => {
 
 function onResetClick() {
   reset({
-    values: {
+    value: {
       email: 'hello@formwerk.dev',
       password: 'p@$$w0rd',
     },
