--- a/src/content/docs/guides/fields/time-fields.mdx
+++ b/src/content/docs/guides/fields/time-fields.mdx
@@ -333,6 +333,21 @@ Switching to 12-hour format won't change the value type or its format. It will s
 
 </Aside>
 
+## Examples
+
+These are some examples of time fields built with Formwerk.
+
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+  <PreviewCard
+    title="NumberFlow"
+    description="Showcase of a date/time field using the excellent `@number-flow/vue` to animate value transitions."
+    link="https://stackblitz.com/edit/formwerk-numberflow-datetime"
+    src="/thumbs/numberflow-datetime.mp4"
+    external
+    client:idle
+  />
+</div>
+
 ## API
 
 ### useTimeField
