--- a/src/content/docs/showcase.mdx
+++ b/src/content/docs/showcase.mdx
@@ -8,21 +8,32 @@ import PreviewCard from '@components/PreviewCard.vue';
 Here are all the cool demos and projects that people have built with Formwerk. If you have something you'd like to share, please post it on [Discord](https://discord.gg/gQ7wqpvT5X), and we'll add it here.
 
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
-  <PreviewCard
-    title="NumberFlow"
-    description="Showcase of a number field using the excellent `@number-flow/vue` to animate value transitions."
-    link="https://stackblitz.com/edit/formwerk-numberflow"
-    src="/thumbs/number-flow.mp4"
-    external
-    client:idle
-  />
 
-  <PreviewCard
-    title="FM Radio"
-    description="Showcase of a slider built to look like a FM radio dial."
-    link="https://stackblitz.com/edit/formwerk-fm-radio"
-    src="/thumbs/fm-radio.mp4"
-    external
-    client:idle
-  />
+<PreviewCard
+  title="Number Fields with NumberFlow"
+  description="Showcase of a number field using the excellent `@number-flow/vue` to animate value transitions."
+  link="https://stackblitz.com/edit/formwerk-numberflow"
+  src="/thumbs/number-flow.mp4"
+  external
+  client:idle
+/>
+
+<PreviewCard
+  title="Date/Time Fields with NumberFlow"
+  description="Showcase of a date/time field using the excellent `@number-flow/vue` to animate value transitions."
+  link="https://stackblitz.com/edit/formwerk-numberflow-datetime"
+  src="/thumbs/numberflow-datetime.mp4"
+  external
+  client:idle
+/>
+
+<PreviewCard
+  title="FM Radio"
+  description="Showcase of a slider built to look like a FM radio dial."
+  link="https://stackblitz.com/edit/formwerk-fm-radio"
+  src="/thumbs/fm-radio.mp4"
+  external
+  client:idle
+/>
+
 </div>
