fix: expanding styles and stuff

--- a/src/content/docs/guides/fields/_partials/_calendarPartial.mdx
+++ b/src/content/docs/guides/fields/_partials/_calendarPartial.mdx
@@ -1,4 +1,4 @@
-```vue collapse={87-183}
+```vue
 <script setup lang="ts">
 import { useCalendar, CalendarCell, type CalendarProps } from '@formwerk/core';
 
