--- a/src/content/docs/guides/fields/_partials/_checkboxGroup.mdx
+++ b/src/content/docs/guides/fields/_partials/_checkboxGroup.mdx
@@ -1,4 +1,4 @@
-```vue collapse={38-100}
+```vue
 <script setup lang="ts">
 import { type CheckboxGroupProps, useCheckboxGroup } from '@formwerk/core';
 
