--- a/src/content/docs/guides/fields/_partials/_dateFieldPartialWithCalendar.mdx
+++ b/src/content/docs/guides/fields/_partials/_dateFieldPartialWithCalendar.mdx
@@ -1,4 +1,4 @@
-```vue collapse={60-163}
+```vue
 <script setup lang="ts">
 import { useDateField, DateTimeSegment, usePicker } from '@formwerk/core';
 import Calendar from './Calendar.vue';
