--- a/src/content/docs/guides/fields/_partials/_numberField.mdx
+++ b/src/content/docs/guides/fields/_partials/_numberField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={40-167}
+```vue
 <script setup lang="ts">
 import { type NumberFieldProps, useNumberField } from '@formwerk/core';
 
