--- a/src/content/docs/guides/fields/_partials/_optionGroup.mdx
+++ b/src/content/docs/guides/fields/_partials/_optionGroup.mdx
@@ -1,4 +1,4 @@
-```vue collapse={20-39}
+```vue
 <script setup lang="ts">
 import { type OptionGroupProps, useOptionGroup } from '@formwerk/core';
 
