--- a/src/content/docs/guides/fields/_partials/_otpField.mdx
+++ b/src/content/docs/guides/fields/_partials/_otpField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={33-91}
+```vue
 <template>
   <div class="otp-field">
     <div class="otp-field__label" v-bind="labelProps">{{ label }}</div>
