--- a/src/content/docs/guides/fields/_partials/_searchField.mdx
+++ b/src/content/docs/guides/fields/_partials/_searchField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={53-164}
+```vue
 <script setup lang="ts">
 import { type SearchFieldProps, useSearchField } from '@formwerk/core';
 
