--- a/src/content/docs/guides/fields/_partials/_select.mdx
+++ b/src/content/docs/guides/fields/_partials/_select.mdx
@@ -1,4 +1,4 @@
-```vue collapse={58-207}
+```vue
 <script setup lang="ts">
 import { useId } from 'vue';
 import { useSelect, type SelectProps } from '@formwerk/core';
