--- a/src/content/docs/guides/fields/_partials/_sliderThumb.mdx
+++ b/src/content/docs/guides/fields/_partials/_sliderThumb.mdx
@@ -1,4 +1,4 @@
-```vue collapse={15-58}
+```vue
 <template>
   <div v-bind="thumbProps" class="thumb">
     <div class="tooltip">{{ currentValue }}</div>
