--- a/src/content/docs/guides/fields/_partials/_speechCustomField.mdx
+++ b/src/content/docs/guides/fields/_partials/_speechCustomField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={117-211}
+```vue
 <script setup lang="ts">
 import { ref, computed } from 'vue';
 import { useCustomField, type CustomFieldProps } from '@formwerk/core';
