--- a/src/content/docs/guides/forms/_partials/_repeater.mdx
+++ b/src/content/docs/guides/forms/_partials/_repeater.mdx
@@ -1,4 +1,4 @@
-```vue collapse={76-185}
+```vue
 <script setup lang="ts">
 import { useFormRepeater, type FormRepeaterProps } from '@formwerk/core';
 
