--- a/src/content/docs/guides/fields/_partials/_fileField.mdx
+++ b/src/content/docs/guides/fields/_partials/_fileField.mdx
@@ -1,4 +1,4 @@
-```vue collapse={65-161}
+```vue
 <script setup lang="ts">
 import { useFileField, type FileFieldProps, FileEntry } from '@formwerk/core';
 
