feat: added docs for radio and checkboxe types

--- a/src/content/docs/guides/fields/_partials/_checkbox.mdx
+++ b/src/content/docs/guides/fields/_partials/_checkbox.mdx
@@ -2,7 +2,7 @@
 <script setup lang="ts">
 import { type CheckboxProps, useCheckbox } from '@formwerk/core';
 
-const props = defineProps<CheckboxProps>();
+const props = defineProps<CheckboxProps<string>>();
 
 const { labelProps, inputProps, errorMessage, errorMessageProps, isChecked } =
   useCheckbox(props);
