feat: test out llms txt

--- a/src/content/docs/guides/getting-started.mdx
+++ b/src/content/docs/guides/getting-started.mdx
@@ -5,7 +5,7 @@ description: An introduction on how to get started with Formwerk
 
 import { Steps, Tabs, TabItem } from '@astrojs/starlight/components';
 
-# What is Formwerk?
+## What is Formwerk?
 
 Formwerk is a library of headless composables for Vue.js that helps you build accessible, high-quality form components for your applications or design systems.
 
