fix: hidden fields usage

--- a/src/content/docs/guides/fields/hidden-fields.mdx
+++ b/src/content/docs/guides/fields/hidden-fields.mdx
@@ -46,6 +46,8 @@ Alternatively, you can use the `useHiddenField` composable to create a custom hi
 import { useHiddenField, type HiddenFieldProps } from '@formwerk/core';
 
 const props = defineProps<HiddenFieldProps>();
+
+useHiddenField(props);
 </script>
 
 <template>
