feat: forking examples

--- a/src/content/docs/guides/forms/index.mdx
+++ b/src/content/docs/guides/forms/index.mdx
@@ -1277,7 +1277,7 @@ const { isSubmitting } = useFormContext();
 
 These are the properties that can be passed to the `useForm` composable.
 
-<MdxTableAPI typeName="FormProps" />
+<MdxTableAPI typeName="SchemaFormProps" />
 
 ### Returns
 
