--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -160,4 +160,11 @@ These composables help you build and organize form components with a laser focus
     link="/guides/forms/form-repeater/"
     src="/thumbs/form-repeater.mp4"
   />
+  <PreviewCard
+    client:idle
+    title="Stepped Form Flow"
+    description="Allows users to navigate through a form in a linear or non-linear way divided into steps."
+    link="/guides/forms/stepped-form-flow/"
+    src="/thumbs/stepped-form-flow.mp4"
+  />
 </div>
