--- a/src/content/docs/guides/forms/stepped-form-flow.mdx
+++ b/src/content/docs/guides/forms/stepped-form-flow.mdx
@@ -1,10 +1,15 @@
 ---
-title: Stepped Form Flow
+title: Stepped Forms
 description: Learn how to create a stepped form flow
 ---
 
 import MdxRepl from '@components/MdxRepl.vue';
 import MdxTableAPI from '@components/MdxTableAPI.vue';
+import AnatomyCanvas from '@components/AnatomyCanvas.vue';
+import AnatomySteppedFormFlow from '@components/AnatomySteppedFormFlow.vue';
+
+import TextFieldPartial from '../fields/_partials/_textField.mdx';
+import CheckboxPartial from '../fields/_partials/_checkbox.mdx';
 
 Stepped form flows are a very common pattern around the web. They are used to guide users through a form in a typically linear way, but not necessarily.
 
@@ -20,14 +25,262 @@ Before we dive into the details, let's clear up some terminology:
 
 ## Features
 
-- Automatic navigation through steps in a linear flow or jumping to steps in non-linear flows.
+- Automatic navigation through steps in a linear flow.
+- Custom navigation through steps in a non-linear flow.
 - Schema validation for steps and validates steps before moving to the next one.
 - Accessible next/previous navigation buttons.
 - Custom step names.
 
 ## Anatomy
 
+<AnatomyCanvas>
+  <AnatomySteppedFormFlow />
+</AnatomyCanvas>
+
 ## Creating a Stepped Form Flow
+
+To create a stepped form, you can use the `useSteppedFormFlow` composable. Just like fields, the `useSteppedFormFlow` composable returns values that should be bound to the anatomy elements.
+
+The `useStepFormFlow` composable returns a fully featured-API that allows you to easily organize your form into steps and respond to whenever the user has finished the last step.
+
+<MdxRepl preview-size="xl" client:load>
+
+<div slot="!TextField.vue">
+  <TextFieldPartial />
+</div>
+
+<div slot="!Checkbox.vue">
+  <CheckboxPartial />
+</div>
+
+<div slot="App.vue">
+
+```vue
+<script setup lang="ts">
+import { useStepFormFlow } from '@formwerk/core';
+import TextField from './TextField.vue';
+import Checkbox from './Checkbox.vue';
+
+const {
+  formProps,
+  nextButtonProps,
+  previousButtonProps,
+  isLastStep,
+  FormStep,
+  onDone,
+} = useStepFormFlow();
+
+onDone((data) => {
+  console.log(JSON.stringify(data.toObject(), null, 2));
+});
+</script>
+
+<template>
+  <form v-bind="formProps">
+    <FormStep>
+      <div>Step 1</div>
+      <TextField name="name" label="Name" />
+      <TextField name="email" label="Email" />
+    </FormStep>
+
+    <FormStep>
+      <div>Step 2</div>
+      <TextField name="city" label="City" />
+      <TextField name="zip" label="ZIP" />
+    </FormStep>
+
+    <FormStep>
+      <div>Step 3</div>
+      <Checkbox name="terms" label="I agree to the terms and conditions" />
+    </FormStep>
+
+    <div>
+      <button v-bind="previousButtonProps">⬅️ Previous</button>
+
+      <button v-bind="nextButtonProps">
+        {{ isLastStep ? 'Submit' : 'Next ➡️' }}
+      </button>
+    </div>
+  </form>
+</template>
+```
+
+</div>
+
+</MdxRepl>
+
+Note that the `FormStep` component is automatically created for you by the composable, you don't need to create it.
+
+## Validation
+
+Validation in stepped forms works exactly the same way in regular forms, when a step is visited the user needs to make sure all the validated fields are valid before proceeding to the next step, but unlike regular forms, `useStepFormFlow` does not accept a `schema` prop. This is because form-level validation does not make sense in this context.
+
+Still, Formwerk's stepped forms do support both HTML constraints and Standard Schema validations.
+
+### HTML Constraints
+
+Here is the same example as before, but we added some `required` and `type` attributes to the fields.
+
+<MdxRepl preview-size="xl" client:load>
+
+<div slot="!TextField.vue">
+  <TextFieldPartial />
+</div>
+
+<div slot="!Checkbox.vue">
+  <CheckboxPartial />
+</div>
+
+<div slot="App.vue">
+
+```vue
+<script setup lang="ts">
+import { useStepFormFlow } from '@formwerk/core';
+import TextField from './TextField.vue';
+import Checkbox from './Checkbox.vue';
+
+const {
+  formProps,
+  nextButtonProps,
+  previousButtonProps,
+  isLastStep,
+  FormStep,
+  onDone,
+} = useStepFormFlow();
+
+onDone((data) => {
+  console.log(JSON.stringify(data.toObject(), null, 2));
+});
+</script>
+
+<template>
+  <form v-bind="formProps">
+    <FormStep>
+      <div>Step 1</div>
+      <TextField name="name" label="Name" required />
+      <TextField name="email" label="Email" required type="email" />
+    </FormStep>
+
+    <FormStep>
+      <div>Step 2</div>
+      <TextField name="city" label="City" required />
+      <TextField name="zip" label="ZIP" required />
+    </FormStep>
+
+    <FormStep>
+      <div>Step 3</div>
+      <Checkbox
+        name="terms"
+        label="I agree to the terms and conditions"
+        required
+      />
+    </FormStep>
+
+    <div>
+      <button v-bind="previousButtonProps">⬅️ Previous</button>
+
+      <button v-bind="nextButtonProps">
+        {{ isLastStep ? 'Submit' : 'Next ➡️' }}
+      </button>
+    </div>
+  </form>
+</template>
+```
+
+</div>
+
+</MdxRepl>
+
+### Schema Validation
+
+For more complex needs, you can use [Standard Schema](https://github.com/standard-schema/standard-schema) to validate your steps. The `FormStep` component accepts a `schema` prop that can be used to validate the step's fields.
+
+Here is the same example as before, but with Standard Schema validations.
+
+<MdxRepl preview-size="xl" client:load>
+
+<div slot="!TextField.vue">
+  <TextFieldPartial />
+</div>
+
+<div slot="!Checkbox.vue">
+  <CheckboxPartial />
+</div>
+
+<div slot="App.vue">
+
+```vue
+<script setup lang="ts">
+import { z } from 'zod';
+import { useStepFormFlow } from '@formwerk/core';
+import TextField from './TextField.vue';
+import Checkbox from './Checkbox.vue';
+
+const step1 = z.object({
+  name: z.string().min(1),
+  email: z.string().email(),
+});
+
+const step2 = z.object({
+  city: z.string().min(1),
+  zip: z.string().min(1),
+});
+
+const step3 = z.object({
+  terms: z.boolean().refine((val) => val, {
+    message: 'You must agree to the terms and conditions',
+  }),
+});
+
+const {
+  formProps,
+  nextButtonProps,
+  previousButtonProps,
+  isLastStep,
+  FormStep,
+  onDone,
+} = useStepFormFlow();
+
+onDone((data) => {
+  console.log(JSON.stringify(data.toObject(), null, 2));
+});
+</script>
+
+<template>
+  <form v-bind="formProps">
+    <FormStep :schema="step1">
+      <div>Step 1</div>
+      <TextField name="name" label="Name" />
+      <TextField name="email" label="Email" />
+    </FormStep>
+
+    <FormStep :schema="step2">
+      <div>Step 2</div>
+      <TextField name="city" label="City" />
+      <TextField name="zip" label="ZIP" />
+    </FormStep>
+
+    <FormStep :schema="step3">
+      <div>Step 3</div>
+      <Checkbox name="terms" label="I agree to the terms and conditions" />
+    </FormStep>
+
+    <div>
+      <button v-bind="previousButtonProps">⬅️ Previous</button>
+
+      <button v-bind="nextButtonProps">
+        {{ isLastStep ? 'Submit' : 'Next ➡️' }}
+      </button>
+    </div>
+  </form>
+</template>
+```
+
+</div>
+
+</MdxRepl>
+
+## Usage
 
 ## Example
 
@@ -48,3 +301,7 @@ Before we dive into the details, let's clear up some terminology:
 #### Props
 
 #### Slot Props
+
+```
+
+```
